--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href= "css/bootstrap.min.css">
   <link type="text/css" rel="stylesheet" href="main.css">
-  <script src="action.js"></script>
+  <script type="text/javascript" src="action.js"></script>
   <title>Pokedex</title>
 </head>
 
 
-<body>
+<body onload="pokedex()">
   <div id="toolbar">
     <img src="img/Logo Pokemon.png" alt="Logotipo">
     <input type="text" class="form-control small-box" placeholder="buscar pokemones">
@@ -18,7 +18,7 @@
   <div id="container" class="d-flex flex-wrap justify-content-center">
     <div class ="pokemon">
       <div class="foto">
-        <img src="img/hunter.png">
+        <img src="img/01.png">
         <!--Aqui mi foto-->
        </div>
 
