Created PHP to connecto Heroku

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <link type="text/css" rel="stylesheet" href= "css/bootstrap.min.css">
   <link type="text/css" rel="stylesheet" href="main.css">
+  <script type="text/javascript" src="pokemon.json"></script>
   <script type="text/javascript" src="action.js"></script>
   <title>Pokedex</title>
 </head>
@@ -35,7 +36,7 @@
 
     <div class ="pokemon">
       <div class="foto">
-        <img src="img/hunter.png">
+        <img src="img/01.png">
         <!--Aqui mi foto-->
        </div>
 
@@ -52,7 +53,7 @@
 
     <div class ="pokemon">
       <div class="foto">
-        <img src="img/hunter.png">
+        <img src="img/01.png">
         <!--Aqui mi foto-->
        </div>
 
@@ -69,7 +70,7 @@
 
     <div class ="pokemon">
       <div class="foto">
-        <img src="img/hunter.png">
+        <img src="img/01.png">
         <!--Aqui mi foto-->
        </div>
 
